[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-arena"
version = "0.1.3"
authors = [
  {name="Will Held", email="wheld3@gatech.edu"},
]
description = "A Framework for User Testing Speech LLMs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "transformers==4.45.2",
    "transformers-stream-generator==0.0.5",
    "gradio==5.1.0",
    "tinydb==4.8.0",
    "xxhash==3.4.1",
    "google-ai-generativelanguage==0.6.10",
    "datasets==2.18.0",
    "librosa==0.10.1",
    "soundfile==0.12.1",
    "openai==1.52.0",
]

[tool.hatch.build]
include = ["src/"]
dev-mode-dirs = [".", "src"]

[tool.hatch.build.sources]
"src/speech-arena" = "speech-arena"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
only-include = ["speech-arena"]

[tool.hatch.version]
[project.urls]
"Homepage" = "https://diva-audio.github.io"

[tool.black]
line-length = 119
target-version = ["py310"]
preview = true

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
src_paths = ["src"]